--- a/mavenproject3/src/main/webapp/WEB-INF/web.xml
+++ b/mavenproject3/src/main/webapp/WEB-INF/web.xml
@@ -8,4 +8,11 @@
             30
         </session-timeout>
     </session-config>
+    
+     <resource-ref>
+        <description>MySQL DataSource example</description>
+        <res-ref-name>jdbc/jnah_shop</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 </web-app>
